// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute balance endpoint should batch addresses 1`] = `
{
  "data": {
    "result": "24254",
  },
  "result": "24254",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute balance endpoint should return failure for empty addresses 1`] = `
{
  "error": {
    "message": "Input, at 'addresses' or 'result' path, must be a non-empty array.",
    "name": "AdapterError",
  },
  "status": "errored",
  "statusCode": 400,
}
`;

exports[`execute balance endpoint should return failure for unsupported network 1`] = `
{
  "error": {
    "message": "Network 'dogecoin' is not supported. Only 'bitcoin' is supported via the streams Bitcoin indexer.",
    "name": "AdapterError",
  },
  "status": "errored",
  "statusCode": 400,
}
`;

exports[`execute balance endpoint should return success 1`] = `
{
  "data": {
    "result": "24242",
  },
  "result": "24242",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute zeusminerfees endpoint should return success 1`] = `
{
  "data": {
    "result": "0.01083",
  },
  "result": "0.01083",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
    "providerIndicatedTimeUnixMs": 1745481937400,
  },
}
`;
